@@ -1,5 +1,6 @@
 INFO
 ====
+cnb000024035.xml - Author of introduction without NKCR AUT ID (700 field).
 cnb000036403.mrc - Edition number (250 field).
 cnb000040543.mrc - Multiple people roles (700 field).
 cnb000087983.mrc - Translator (700 field).
